--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -11,16 +11,16 @@
         "header-layout.mobile"
       ]
     },
-  
     "header-layout.desktop": {
       "children": [
         "header-row#notification",
-        "header-row#main"
+        "header-row#main",
+        "header-row#menu"
       ]
     },
-  
     "header-layout.mobile": {
       "children": [
+        "drawer",
         "header-row#notification",
         "header-row#main-mobile",
         "header-row#search"
@@ -54,7 +54,6 @@
           "minicart",
           "login"
         ],
-      
         "props": {
           "sticky": true,
           "inverted":true
@@ -86,5 +85,12 @@
           "text": "**Free Shipping on orders over $50**",
           "textPosition": "CENTER"
         }
+      },
+      "header-row#menu": {
+        "children": [
+          "header-spacer",
+          "vtex.menu@2.x:menu#categories",
+          "header-spacer"
+        ]
       }
   }
