--- a/store/blocks/menu.jsonc
+++ b/store/blocks/menu.jsonc
@@ -9,34 +9,9 @@
         "orientation": "horizontal"
       }
   },
-  "menu-item#major-appliances": {
-       "children": [
-        "vtex.menu@2.x:submenu#major"
-       ]
-  },
-  "menu-item#small-appliances": {
-     "children": [
-      "vtex.menu@2.x:submenu#small"
-     ]
-},
-"menu-item#electronics": {
-     "children": [
-      "vtex.menu@2.x:submenu#electronics"
-     ]
-},
-  "vtex.menu@2.x:submenu#major": {
-      "children": [
-        "vtex.menu@2.x:menu#major"
-      ]
-  },
-  "vtex.menu@2.x:submenu#small":{
+  "vtex.menu@2.x:submenu#major":{
     "children":[
-      "vtex.menu@2.x:menu#small"
-    ]
-  },
-  "vtex.menu@2.x:submenu#electronics":{
-    "children":[
-      "vtex.menu@2.x:menu#electronics"
+      "vtex.menu@2.x:menu#major"
     ]
   },
   "vtex.menu@2.x:menu#major": {
@@ -46,27 +21,35 @@
         "menu-item#washers"
       ],
       "props": {
-        "orientation": "vertical"
-    }
+          "orientation": "vertical"
+      }
   },
-  "vtex.menu@2.x:menu#small": {
-    "children": [
-      "menu-item#mixers",
-      "menu-item#toasters",
-      "menu-item#coffee"
-    ],
-    "props": {
-        "orientation": "vertical"
+  "vtex.menu@2.x:submenu#small":{
+      "children":[
+          "vtex.menu@2.x:menu#small"
+        ]
+    },
+    "vtex.menu@2.x:menu#small": {
+        "children": [
+        "menu-item#mixers",
+        "menu-item#toasters",
+        "menu-item#coffee"
+        ],
+        "props": {
+            "orientation": "vertical"
+        }
+    },
+    "vtex.menu@2.x:submenu#electronics": {
+        "children":[ "vtex.menu@2.x:menu#electronics"]
+    },
+    "vtex.menu@2.x:menu#electronics": {
+        "children": [
+            "menu-item#cameras",
+            "menu-item#laptops",
+            "menu-item#tvs"
+        ],
+        "props": {
+            "orientation": "vertical"
+        }
     }
-},
-  "vtex.menu@2.x:menu#electronics": {
-    "children": [
-      "menu-item#cameras",
-      "menu-item#laptops",
-      "menu-item#tvs"
-    ],
-    "props": {
-        "orientation": "vertical"
-    }
-}
 }
